# legal-rag-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.cohere-secrets.yml  docker-compose.qdrant-secrets.yml  docker-compose.secrets.yml  docker-compose.yml  instructions.md  pyproject.toml
datasets/: COVERAGE.md  README.md
datasets/truepdf/: README.md
docker/: entrypoint.sh
docs/: architecture.md  evaluation.md  public_datasets.md
eval/: README.md  eval_points.json  gold_documents.json  gold_retrieval.json  harness_cases.json  public_eval_manifest.json
eval/operator-edits/: handwritten_records_edit.md  messy_case_edited_memo.md  scanned_filings_edit.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  env.ts  main.tsx
outputs/all_categories/: ab_eval.md  (+18 more)
playbooks/: default_legal_playbook.json
quick-eval/: README.md
scripts/: smoke_cohere_rerank.py  smoke_cohere_two_stage.py
state/: dpo_pairs.candidates.jsonl  edit_classifications.jsonl  edit_memory.json  edits.jsonl  knowledge_layer.json  learn_suggestions.json  operator_profile.json  retrieval_feedback.json
tests/: test_api_smoke.py  test_draft_checkpoint_validation.py  test_draft_specs.py  test_eval_denominator.py  test_feature_propagation.py  test_grounding.py  test_index_query_retrieval_mode.py  test_learning_metadata.py  test_pdf_route.py  test_playbook_risk.py  test_qdrant_backend.py  test_reranker_cohere.py  test_retrieval_cap.py  test_retrieval_integration.py  test_run_fingerprint.py
(+118 files in other folders)
