[project]
name = "pipeline"
version = "0.1.0"
description = "OpenAI-core grounded pipeline for messy legal-style document ingestion, retrieval, drafting, optional Cohere reranking, and edit learning."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "openai>=1.75.0",
  "pymupdf>=1.24.0",
  "pillow>=10.0.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
pipeline = "pipeline.cli:main"
pipeline-api = "pipeline.api:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.hatch.build.targets.sdist]
include = [
  "src/pipeline",
  "README.md",
  "pyproject.toml",
]
